--- a/my-app/src/Components/sidebar/sidebar.css
+++ b/my-app/src/Components/sidebar/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    flex: 1;
+    nav-down: 1;
     height: calc(100vh - 50px);
     background-color: rgb(251, 251, 255);
     position: sticky;
@@ -9,10 +9,11 @@
   .sidebarWrapper {
     padding: 20px;
     color: #555;
+    position: relative;
   }
   
   .sidebarMenu {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
   
   .sidebarTitle {
@@ -24,6 +25,7 @@
   .sidebarList {
     list-style: none;
     padding: 5px;
+    
   }
   
   .sidebarListItem {
